# Phantom-BMD-Calculation

./: README.md  cropROI.py  phantomBMD.py
img/: 00000002.dcm  00000003.dcm  00000004.dcm  00000005.dcm  00000006.dcm  00000007.dcm  00000008.dcm  00000009.dcm  00000010.dcm
src/: CMakeLists.txt  automatic_BMD_calculation.cxx  automatic_BMD_calculation.py  cropROI.py  phantomBMD.py
